--- a/index-tela-de-cadastro.html
+++ b/index-tela-de-cadastro.html
@@ -1,14 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto Morvan</title>
     <link rel="stylesheet" href="style-tela-de-cadastro.css" type="text/css">
 </head>
+
 <body>
     <div class="imgfundo"></div>
     <div class="quadro"></div>
-    <div class="navbar"></div>
+    <div class="navbar">
+        <img src="img/Morvan_Odonto-removebg-preview.png">
+        <h1>Ficha Cadastral do Pacieinte </h1>
+        <div class="barra-meio"></div>
+    </div>
+        <div class="bloco-nome">
+            <label for="nome"> Nome : </label>
+            <input id="nome" type="text" name="nome" placeholder="Nome completo" class="entrada">
+        </div>
+        <div class="bloco-idade">
+            <label for="Data-de-nascimento"> Idade : </label>
+            <input id="Idade" type="text" name="Idade" placeholder="Idade" class="entrada">
+        </div>
+        <div class="bloco-Data-de-nascimento">
+            <label for="Data-de-nascimento"> Data-de-nascimento : </label>
+            <input id="Data-de-nascimento" type="text" name="Data-de-nascimento" placeholder="Data-de-nascimento" class="entrada">
+        </div>
+        <!-- Colocar o espaço de gênero -->
+
+
+
+        <!-- Colocar o espaço de gênero -->
+
+        <div class="bloco-CPF">
+            <label for="CPF"> CPF : </label>
+            <input id="CPF" type="text" name="CPF" placeholder="CPF" class="entrada">
+        </div>
+
+         <div class="bloco-Email">
+            <label for="Email"> Email : </label>
+            <input id="Email" type="text" name="Email" placeholder="Email" class="entrada">
+        </div>
+
+        <div class="bloco-Endereço">
+            <label for="Endereço"> Endereço : </label>
+            <input id="Endereço" type="text" name="Endereço" placeholder="Endereço" class="entrada">
+        </div>
+
+        <div class="bloco-Bairro">
+            <label for="Bairro"> Bairro : </label>
+            <input id="Bairro" type="text" name="Bairro" placeholder="Bairro" class="entrada">
+        </div>
+
+        <div class="bloco-CEP">
+            <label for="CEP"> CEP : </label>
+            <input id="CEP" type="text" name="CEP" placeholder="CEP" class="entrada">
+        </div>
+    
+    
+
 </body>
+
 </html>
