--- a/index-tela-de-cadastro.html
+++ b/index-tela-de-cadastro.html
@@ -16,50 +16,72 @@
         <h1>Ficha Cadastral do Pacieinte </h1>
         <div class="barra-meio"></div>
     </div>
-        <div class="bloco-nome">
-            <label for="nome"> Nome : </label>
-            <input id="nome" type="text" name="nome" placeholder="Nome completo" class="entrada">
-        </div>
-        <div class="bloco-idade">
-            <label for="Data-de-nascimento"> Idade : </label>
-            <input id="Idade" type="text" name="Idade" placeholder="Idade" class="entrada">
-        </div>
-        <div class="bloco-Data-de-nascimento">
-            <label for="Data-de-nascimento"> Data-de-nascimento : </label>
-            <input id="Data-de-nascimento" type="text" name="Data-de-nascimento" placeholder="Data-de-nascimento" class="entrada">
-        </div>
-        <!-- Colocar o espaço de gênero -->
+    <div class="bloco-nome">
+        <label for="nome"> Nome : </label>
+        <input id="nome" type="text" name="nome" placeholder="Nome completo" class="entrada">
+    </div>
+    <div class="bloco-idade">
+        <label for="Data-de-nascimento"> Idade : </label>
+        <input id="Idade" type="text" name="Idade" placeholder="Idade" class="entrada">
+    </div>
+    <div class="bloco-Data-de-nascimento">
+        <label for="Data-de-nascimento"> Data-de-nascimento : </label>
+        <input id="Data-de-nascimento" type="text" name="Data-de-nascimento" placeholder="Data-de-nascimento"
+            class="entrada">
+    </div>
+    <!-- Colocar o espaço de gênero -->
+
+    <div class="bloco-genero">
+        <label for="genero">Gênero :
+            <input type="radio" name="genero">
+            <span>Masc</span>
+            <input type="radio" name="genero">
+            <span>Fem</span>
+        </label>
+    </div>
+
+    <!-- Colocar o espaço de gênero -->
+
+    <div class="bloco-CPF">
+        <label for="CPF"> CPF : </label>
+        <input id="CPF" type="text" name="CPF" placeholder="CPF" class="entrada">
+    </div>
+
+    <div class="bloco-Email">
+        <label for="Email"> Email : </label>
+        <input id="Email" type="text" name="Email" placeholder="Email" class="entrada">
+    </div>
+
+    <div class="bloco-Endereço">
+        <label for="Endereço"> Endereço : </label>
+        <input id="Endereço" type="text" name="Endereço" placeholder="Endereço" class="entrada">
+    </div>
+
+    <div class="bloco-Bairro">
+        <label for="Bairro"> Bairro : </label>
+        <input id="Bairro" type="text" name="Bairro" placeholder="Bairro" class="entrada">
+    </div>
+
+    <div class="bloco-CEP">
+        <label for="CEP"> CEP : </label>
+        <input id="CEP" type="text" name="CEP" placeholder="CEP" class="entrada">
+    </div>
+
+    <div class="bloco-Celular">
+        <label for="Celular"> Celular : </label>
+        <input id="Celular" type="text" name="Celular" placeholder="Celular" class="entrada">
+    </div>
+
+    <div class="bloco-Telefone">
+        <label for="Telefone"> Telefone : </label>
+        <input id="Telefone" type="text" name="Telefone" placeholder="Telefone" class="entrada">
+    </div>
+
+    <div class="rotulos">&nbsp;
+        <a href=""><button value="Enviar" id="btn">Continuar</button></a>
+    </div>
 
 
-
-        <!-- Colocar o espaço de gênero -->
-
-        <div class="bloco-CPF">
-            <label for="CPF"> CPF : </label>
-            <input id="CPF" type="text" name="CPF" placeholder="CPF" class="entrada">
-        </div>
-
-         <div class="bloco-Email">
-            <label for="Email"> Email : </label>
-            <input id="Email" type="text" name="Email" placeholder="Email" class="entrada">
-        </div>
-
-        <div class="bloco-Endereço">
-            <label for="Endereço"> Endereço : </label>
-            <input id="Endereço" type="text" name="Endereço" placeholder="Endereço" class="entrada">
-        </div>
-
-        <div class="bloco-Bairro">
-            <label for="Bairro"> Bairro : </label>
-            <input id="Bairro" type="text" name="Bairro" placeholder="Bairro" class="entrada">
-        </div>
-
-        <div class="bloco-CEP">
-            <label for="CEP"> CEP : </label>
-            <input id="CEP" type="text" name="CEP" placeholder="CEP" class="entrada">
-        </div>
-    
-    
 
 </body>
 
