Tudo quase finalizado

--- a/index-cadastro-bem-sucedido.html
+++ b/index-cadastro-bem-sucedido.html
@@ -14,7 +14,7 @@
         <img src="img/certo-removebg-preview.png" alt="">
         <p>Cadastro realizado com Sucesso</p>
         <div class="rotulos">&nbsp;
-            <button value="Enviar" id="btn">Efetuar Login</button>
+           <a href="index-tela-de-login.html"><button value="Enviar" id="btn">Efetuar Login</button></a>
         </div>
     </div>
 </body>
