--- a/index-tela-de-cadastro.html
+++ b/index-tela-de-cadastro.html
@@ -78,7 +78,7 @@
     </div>
 
     <div class="rotulos">&nbsp;
-        <a href=""><button value="Enviar" id="btn">Continuar</button></a>
+        <a href="index-cadastro-bem-sucedido.html"><button value="Enviar" id="btn">Continuar</button></a>
     </div>
 
 
