--- a/index-redefinição-de-senha.html
+++ b/index-redefinição-de-senha.html
@@ -9,7 +9,9 @@
 <body>
     <div class="quadrado">
         <h1>Enviado!!!</h1>
-        <p>Um e-mail foi enviado para larxxxx21@gmail.com. Siga as intruções para redefinir. Após isso, tente novamente.</p>
+        <p>Um e-mail foi enviado para <br> larxxxx21@gmail.com. Siga as intruções<br> para redefinir. Após isso, tente novamente.</p>
+        <a href="index-tela-de-login.html"><button value="Enviar" id="btn">Efetuar Login</button></a>
     </div>
+    
 </body>
 </html>
