Só mudar as fontes das letras

--- a/index-tela-de-login.html
+++ b/index-tela-de-login.html
@@ -29,7 +29,7 @@
         <div class="Cadastrar-no-site">
             <a href="index-tela-de-cadastro.html">Cadastre-se</a>
         </div>
-        <div class="botoes">
+        <a href="index-login-google.html"><div class="botoes">
             <button class="buttong">
                 <svg xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid" viewBox="0 0 256 262">
                     <path fill="#4285F4"
@@ -46,9 +46,9 @@
                     </path>
                 </svg>
                 Continue with Google
-            </button>
+            </button></a>
 
-            <button class="buttonf">
+            <a href="index-login-facebook.html"><button class="buttonf">
                 <svg stroke="#ffffff" xml:space="preserve" viewBox="-143 145 512 512"
                     xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg" id="Layer_1"
                     version="1.1" fill="#ffffff">
@@ -61,7 +61,7 @@
                     </g>
                 </svg>
                 Continue with Facebook
-            </button>
+            </button></a>
         </div>
     </div>
 </body>
