--- a/index-tela-de-cadastro.html
+++ b/index-tela-de-cadastro.html
@@ -26,7 +26,7 @@
     </div>
     <div class="bloco-Data-de-nascimento">
         <label for="Data-de-nascimento"> Data-de-nascimento : </label>
-        <input id="Data-de-nascimento" type="text" name="Data-de-nascimento" placeholder="Data-de-nascimento"
+        <input id="Data-de-nascimento" type="date" name="Data-de-nascimento" placeholder="Data-de-nascimento"
             class="entrada">
     </div>
     <!-- Colocar o espaço de gênero -->
