--- a/index-redefinição-de-senha.html
+++ b/index-redefinição-de-senha.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redefinição de senha</title>
     <link rel="stylesheet" href="style-redefinição-de-senha.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Antic+Slab&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="quadrado">
