--- a/index-tela-de-cadastro.html
+++ b/index-tela-de-cadastro.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto Morvan</title>
     <link rel="stylesheet" href="style-tela-de-cadastro.css" type="text/css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Antic+Slab&display=swap" rel="stylesheet">
 </head>
 
 <body>
