--- a/index-Seja-bem-vindo.html
+++ b/index-Seja-bem-vindo.html
@@ -10,11 +10,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Antic+Slab&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="fundo"></div>
     <div class="quadrado">
-        <img src="img/Morvan_Odonto__1_-removebg-preview.png" alt="">
         <h1>Seja<br> Bem Vindo </h1>
+        <img src="img/Morvan_Odonto__1_-removebg-preview.png" alt="">
         <div class="btn">&nbsp;
-            <a href="index-Verificando-dados.html"><button value="Enviar" id="btn">Acessar</button></a>
+            <a href="index-Verificando-dados.html"><button value="Enviar" id="btn"><p>Acessar</p></button></a>
         </div>
     </div>
 </body>
