--- a/index-tela-de-login.html
+++ b/index-tela-de-login.html
@@ -11,7 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Antic+Slab&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body> 
+    <div class="imgfundo"></div>
     <div class="quadrado">
         <h1>Login</h1>
         <div class="bloco-Email">
@@ -23,7 +24,7 @@
             <input id="Senha" type="text" name="Senha" placeholder="Senha" class="entrada">
         </div>
         <div class="btn">&nbsp;
-            <a href="index-Verificando-dados.html"><button value="Enviar" id="btn">Acessar</button></a>
+            <a href="index-Verificando-dados.html"><button value="Enviar" id="btn"><p>Acessar</p></button></a>
         </div>
         <div class="Recuperacao-de-senha">
             <a href="">Esqueci minha Senha</a>
