--- a/index-cadastro-mal-sucedido.html
+++ b/index-cadastro-mal-sucedido.html
@@ -16,11 +16,8 @@
         <h1> Falha!!! </h1>
         <img src="img/X2-removebg-preview.png" alt="">
         <p>Sua senha esta incorreta</p>
-        <div class="rotulos">&nbsp;
-           <a href=""><button value="Enviar" id="btn">Efetuar Login</button></a>
-        </div>
         <div class="btn">&nbsp;
-            <a href=""><button value="Enviar" id="btnt">Redefinir Senha</button></a>
+            <a href="index-redefinição-de-senha.html"><button value="Enviar" id="btnt">Redefinir Senha</button></a>
         </div>
         <div class="btn">&nbsp;
             <a href="index-tela-de-login.html"><button value="Enviar" id="btnr">Tentar Novamente</button></a>
