--- a/index-login-facebook.html
+++ b/index-login-facebook.html
@@ -14,7 +14,7 @@
             <p class="logo">Facebook</p>
             <input type="text" placeholder="Email" required="">
             <input type="password" placeholder="Password" required="">
-            <button class="login">Entrar</button>
+            <button class="login"><a href="index-Seja-bem-vindo.html">Entrar</a></button>
             <a href="#">Esqueci minha senha ?</a>
             <hr>
             <button class="create-account">Criar nova conta</button>
