--- a/index-login-google-s.html
+++ b/index-login-google-s.html
@@ -36,7 +36,7 @@
                 <a href="">Saiba mais</a>
             </div>
             </p>
-            <a href="index-Seja-bem-vindo.html"> <button class="login">Seguinte</button></a>
+            <button class="login"> <a href="index-Seja-bem-vindo.html">Seguinte</a></button>
             <hr>
             <div class="criar-conta">
                 <a href="">Criar conta</a>
