--- a/index-login-google.html
+++ b/index-login-google.html
@@ -36,7 +36,7 @@
                 <a href="">Saiba mais</a>
             </div>
             </p>
-            <button class="login">Seguinte</button>
+             <button class="login"><a href="index-login-google-s.html"> Seguinte</a></button>
             <hr>
             <div class="criar-conta">
                 <a href="">Criar conta</a>
