--- a/index-redefinição-de-senha.html
+++ b/index-redefinição-de-senha.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,12 +10,20 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Antic+Slab&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <div class="quadrado">
-        <h1>Enviado!!!</h1>
-        <p>Um e-mail foi enviado para <br> larxxxx21@gmail.com. Siga as intruções<br> para redefinir. Após isso, tente novamente.</p>
-        <a href="index-tela-de-login.html"><button value="Enviar" id="btn">Efetuar Login</button></a>
+
+    <div class="space">
+        <div class="quadrado">
+            <div class="config">
+            <h1>Enviado!!!</h1>
+            <p>Um e-mail foi enviado para <br> larxxxx21@gmail.com. Siga as intruções<br> para redefinir. Após isso,
+                tente novamente.</p>
+            <a href="index-tela-de-login.html"><button value="Enviar" id="btn">Efetuar Login</button></a>
+        </div>
+        </div>
     </div>
-    
+
 </body>
+
 </html>
