--- a/index-Seja-bem-vindo.html
+++ b/index-Seja-bem-vindo.html
@@ -15,7 +15,7 @@
         <h1>Seja<br> Bem Vindo </h1>
         <img src="img/Morvan_Odonto__1_-removebg-preview.png" alt="">
         <div class="btn">&nbsp;
-            <a href="index-Verificando-dados.html"><button value="Enviar" id="btn"><p>Acessar</p></button></a>
+            <a href=""><button value="Enviar" id="btn"><p>Acessar</p></button></a>
         </div>
     </div>
 </body>
